fixed the percent change portion. be aware of the looping and dont go on this page too much okay

--- a/public/home.css
+++ b/public/home.css
@@ -5,6 +5,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    margin: 0;
+
+}
+
 .box {
     display: flex;
     justify-content: center;
@@ -80,6 +85,7 @@
     padding: 100px;
     justify-content: center;
     align-items: center;
+    height: 600px;
 }
 
 .sec h2 {
@@ -216,7 +222,6 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    color: white;
     align-items: center;
     justify-content: center;
     flex-wrap: nowrap;
@@ -225,8 +230,10 @@
     margin: 0;
 }
 
+
 .boxsection {
     width: 300px;
+    color: white;
     height: 200px;
     margin: 56px 44px 0;
     position: relative;
